guest picker shift mui bug fix

--- a/app/globals.css
+++ b/app/globals.css
@@ -86,7 +86,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-  padding:0 !important;/* MUI shenanigans*/
+  
 }
 
 html{
@@ -94,6 +94,7 @@ html{
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   overflow-y: scroll;
+  /* padding:0 !important;MUI shenanigans */
 }
 
 body {
